--- a/html-css/Módulo 2/capitulo-15/ex04/style.css
+++ b/html-css/Módulo 2/capitulo-15/ex04/style.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+/*
+ # = id
+ . = class
+ : = pseudo-class
+ :: = pseudo-element
+ > = clildren
+*/
+
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -21,7 +29,7 @@ a:active {
     color: purple;
 }
 
-.especial{
+.especial {
     background-color: lightcoral;
 }
 
@@ -31,5 +39,4 @@ a:active {
 
 .especial::after {
     content: '⇐';
-  
 }
