--- a/html-css/Módulo 2/capitulo-16/ex02/style.css
+++ b/html-css/Módulo 2/capitulo-16/ex02/style.css
@@ -1,61 +1,73 @@
 @charset "UTF-8";
 body {
-    background-color: lightgray;
-    font-family: Arial, Helvetica, sans-serif;
+    border: 0px solid black;
+    background-color: rgb(196, 196, 255);
     margin: 0px;
 }
 
 header {
-    height: 100px;
-    background-color: aqua;
+    background-color: rgb(0, 153, 255);
+    margin: 15px 15px 10px 15px;
 }
 
-main{
-    background-color: blueviolet;
+main {
+    background-color: rgb(165, 240, 243);
+    border: 1px solid black;
+    border-radius: 10px;
+    margin: 0px 15px 10px 15px;
+    padding: 10px;
+    
+}
+
+#lista {
+  
+    background-color: white;
+    color: black;   
+    border-radius: 20px 0px;
+    
+    box-shadow: 3px 3px 5px 2px rgba(0, 0, 0, 0.288);
+   
+}
+
+#texto {
+   
+    background-color: white;
+    color: black;
+   
+    border-radius: 12px;   
+    margin-top: 10px;
+    box-shadow: 3px 3px 5px 2px rgba(0, 0, 0, 0.288);
+}
+
+#texto>p {
+    text-indent: 15px;
+    text-align: justify;
+    font-size: 1.25em;
+    padding: 10px;
+    margin: 0px;
+
+}
+
+p:hover{
+    color: blue;
+
+}
+
+#lista>p {
+    text-indent: 15px;
+    text-align: justify;
+    font-size: 1.1em;
+    padding: 10px;
+    margin: 0px;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    margin: 0px 15px 10px 15px;
+    height: 50px;
 }
 
 h1 {
     margin: 0px;
-}
-
-nav{
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 1.5em;
-    font-style: italic;
-
-    width: 100px;
-
-}
-
-a{
-        text-decoration: none;
-}
-
-div#titulos{
-    display: inline-block;
-    background-color: black;
-    color: white;
-    width: 150px;   
-    height: 400px; 
-    margin: 0px;
-}
-
-
-div#textos{
-    display: inline-block;
-    background-color: rgb(248, 248, 248);
-    color: rgb(0, 0, 0);
-    width: 450px;
-    height: 400px;
-    
-    margin: 0px;
-}
-
-ul{
- display: inline-block;
- margin: 0px;
-}
-
-p{
-    margin: 0px
 }
