--- a/html-css/Módulo 2/desafio/style.css
+++ b/html-css/Módulo 2/desafio/style.css
@@ -117,6 +117,10 @@ h3 {
     margin: 0px;
 }
 
+main>p{
+    padding-left: 15px;
+}
+
 main>section>p {
     font-family: Arial, Helvetica, sans-serif;
     text-align: justify;
